# linst

./: .gitignore  CMakeLists.txt  README.md
src/: DistroDetector.cpp  DistroDetector.h  PackageData.h  PackageResolver.cpp  PackageResolver.h  StringUtils.cpp  StringUtils.h  main.cpp
